--- a/_quarto.yml
+++ b/_quarto.yml
@@ -4,6 +4,7 @@ project:
 
 website:
   page-navigation: true
+  title: "Mohammad Rafiqul Islam"
   favicon: "/_assets/images/favicon.ico"
   open-graph: true
   bread-crumbs: true
@@ -17,21 +18,26 @@ website:
     logo-alt: "Florida State University"
     logo-href: index.qmd
     background: "#782F40"
-    left:
+    right:
       - href: index.qmd
         text: Home
-      - research.qmd
-      - teaching.qmd
-      - portfolio.qmd
-      - blog.qmd
-      - cv.qmd
+      - href: research.qmd
+        text: Research
+      - href: teaching.qmd
+        text: Teaching
+      - href: portfolio.qmd
+        text: Portfolio
+      - href: cv.qmd
+        text: CV
+      - href: blog.qmd
+        text: Blog
   sidebar: 
     style: floating
     alignment: left
     background: "#f4f4f4"
     contents: 
       - text: "<img src='/_assets/images/profile.png' class='oval-image' alt='Profile Picture' style='align-center; margin-bottom: 10px;'>" 
-      - text: "<span style='font-size: 1.5em; font-weight: bold; margin-bottom: 10px;'>Mohammad Rafiqul Islam</span>"
+      - text: "<span style='font-size: 1.5em; font-weight: bold; margin-bottom: 10px;'>Rafiq Islam</span>"
       - text: "<span style='margin-bottom: 10px;'>Ph.D. Candidate in Mathematics</span>"
       - text: "<span style='display: inline-block; vertical-align: middle;'><img src='/_assets/images/univ.png' height='15' width='15' alt='University' style='margin-right: 5px;'></span><span style='display: inline-block; vertical-align: middle; color: #782F40;'><a href='https://fsu.edu' target='_blank' style='color: #782F40;'>Florida State University</a></span>"
       - icon: geo-alt
@@ -64,6 +70,10 @@ website:
       - icon: twitter 
         href: https://twitter.com/rafiqr35 
         target: _blank
+      - icon: rss
+        href: https://mrislambd.github.io/docs/index.xml
+      
+
     border: true
     background: "#f4f4f4"
   reader-mode: true
