--- a/_quarto.yml
+++ b/_quarto.yml
@@ -50,7 +50,7 @@ website:
         text: "Email: mi21b@fsu.edu"
         href: "mailto:mi21b@fsu.edu"
       - icon: building
-        text: "Office: MCH 406 F"
+        text: "Office: Love 331"
       - icon: calender-check
         text: "Office Hour: TBD"
       - text: "<span style='font-size: 1.1em; font-weight: bold; margin-top: 10px; margin-bottom: 50px; color: #782F40'>Find me on</span>"
