--- a/_quarto.yml
+++ b/_quarto.yml
@@ -51,6 +51,7 @@ website:
         href: "mailto:mi21b@fsu.edu"
       - icon: building
         text: "Office: Love 331"
+        href: "https://maps.app.goo.gl/p25RvKR6jiecRYsG9"
       - icon: calender-check
         text: "Office Hour: TBD"
       - text: "<span style='font-size: 1.1em; font-weight: bold; margin-top: 10px; margin-bottom: 50px; color: #782F40'>Find me on</span>"
