--- a/_quarto.yml
+++ b/_quarto.yml
@@ -52,6 +52,7 @@ website:
       - icon: building
         text: "Office: Love 331"
         href: "https://maps.app.goo.gl/p25RvKR6jiecRYsG9"
+        target: _blank
       - icon: calender-check
         text: "Office Hour: TBD"
       - text: "<span style='font-size: 1.1em; font-weight: bold; margin-top: 10px; margin-bottom: 50px; color: #782F40'>Find me on</span>"
