--- a/_quarto.yml
+++ b/_quarto.yml
@@ -39,7 +39,7 @@ website:
     alignment: left
     background: "#f4f4f4"
     contents: 
-      - text: "<img src='/_assets/images/profile.png' class='oval-image' alt='Profile Picture' style='align-center; margin-bottom: 10px;'>" 
+      - text: "<img src='/_assets/images/profile2.jpeg' class='oval-image' alt='Profile Picture' style='align-center; margin-bottom: 10px;'>" 
       - text: "<span style='font-size: 1.5em; font-weight: bold; margin-bottom: 10px;'>Rafiq Islam</span>"
       - text: "<span style='margin-bottom: 10px;'>Ph.D. Candidate in Mathematics</span>"
       - text: "<span style='display: inline-block; vertical-align: middle;'><img src='/_assets/images/univ.png' height='15' width='15' alt='University' style='margin-right: 5px;'></span><span style='display: inline-block; vertical-align: middle; color: #782F40;'><a href='https://fsu.edu' target='_blank' style='color: #782F40;'>Florida State University</a></span>"
