--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -16,6 +16,10 @@ jobs:
 
       - name: Set up Quarto
         uses: quarto-dev/quarto-actions/setup@v2
+      
+      - name: Install TinyTeX
+        run: |
+          quarto install tinytex
 
       - name: Install R
         uses: r-lib/actions/setup-r@v2
